made array in TS

--- a/ts/check.html
+++ b/ts/check.html
@@ -97,7 +97,14 @@
 
 ---
 
-### <img align ='center' src='https://media2.giphy.com/media/UQDSBzfyiBKvgFcSTw/giphy.gif?cid=ecf05e47p3cd513axbek3f56ti3jzizq8hincw20jauyyfyw&rid=giphy.gif' width ='29' /> Here's some humor for you:
+### <img a
+
+
+
+
+
+
+lign ='center' src='https://media2.giphy.com/media/UQDSBzfyiBKvgFcSTw/giphy.gif?cid=ecf05e47p3cd513axbek3f56ti3jzizq8hincw20jauyyfyw&rid=giphy.gif' width ='29' /> Here's some humor for you:
 <p align="center">
   <img  src="https://readme-jokes.vercel.app/api?type=horizontal&theme=tokyonight" alt="Jokes Card" style="width: 100%; max-width: 800px; " />
 </p>
